# HaloMS

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: adata_adsc.h5ad  adsc_af2_score_full_lists.csv  adsc_kegg_lists.csv  bait_list.csv  project_af2_mono__emb.csv
data/calculated/adsc/: adata_target_P01100.h5ad  adata_target_P01106.h5ad  adata_target_P04626.h5ad  adata_target_P10242.h5ad  adata_target_P15336.h5ad  adata_target_P16220.h5ad  adata_target_P18846.h5ad  adata_target_P18847.h5ad  adata_target_P23769.h5ad  adata_target_P35221.h5ad  adata_target_P40763.h5ad  adata_target_P42574.h5ad  adata_target_P48431.h5ad  adata_target_P49715.h5ad  adata_target_P49716.h5ad  adata_target_Q07869.h5ad  adata_target_Q9Y2D1.h5ad
figures/adsc/dendrogram_results/: P01100_sorted_gene_names.csv  P01106_sorted_gene_names.csv  P04626_sorted_gene_names.csv  P10242_sorted_gene_names.csv  P15336_sorted_gene_names.csv  P16220_sorted_gene_names.csv  P18846_sorted_gene_names.csv  P18847_sorted_gene_names.csv  P23769_sorted_gene_names.csv  P35221_sorted_gene_names.csv  P40763_sorted_gene_names.csv  P42574_sorted_gene_names.csv  P48431_sorted_gene_names.csv  P49715_sorted_gene_names.csv  P49716_sorted_gene_names.csv  Q07869_sorted_gene_names.csv  Q9Y2D1_sorted_gene_names.csv
figures/adsc/heatmap_results/: P01100_sorted_kegg_pathway_names.csv  P01106_sorted_kegg_pathway_names.csv  (+15 more)
localcolabfold/: af2emb.py  colab-run-mono-seed0.sh  colab-run-multi-seed0.sh  get_score_multi.py  merge_score_af2emb.py
visualization/: basic.py  makefig-adsc.ipynb
(+17 files in other folders)
