[tool.poetry]
name = "HaloMS"
version = "0.1.0"
description = ""
authors = ["takashi-yamanashi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.3"
scanpy = "1.9.3"
jupyterlab = "^3.6.3"
plotly = "^5.14.1"
ipywidgets = "^8.0.6"
kaleido = "0.2.1"
umap-learn = "0.5.3"
anndata = "0.8.0"
pandas = "1.5.3"
matplotlib = "3.6.3"
numba = "0.56.3"
scikit-learn = "1.2.2"
scipy = "1.9.3"
louvain = "0.8.2"
igraph = "0.10.8"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
